# sos-toolkit

./: .gitignore  README.md  pyproject.toml
docs/01_project/: 01_overview.md  02_goals.md  03_related_projects.md  04_roadmap.md  05_open_problems.md  06_FAQ.md
docs/02_introduction/: 01_System.md  02_Context.md  03_Command.md
docs/03_intermediate/: 01_Action.md  02_Resolvable.md  03_Condition.md
docs/04_advanced/: 01_Tool.md  02_Model.md  03_Service.md
docs/06_reference/: 01_tools.md  02_service.md
src/sos_toolkit/: __init__.py  __main__.py
src/sos_toolkit/action/: __init__.py
src/sos_toolkit/action/sos/: action.py  build.py  clean.py  cli.py  commit.py  config.py  context.py  create.py  debug.py  dev.py  down.py  fetch.py  help.py  install.py  load.py  migrate.py  profile.py  pull.py  purge.py  push.py  restart.py  save.py  serve.py  service.py  setup.py  status.py  tool.py  up.py  update.py  user.py  version.py  web.py
src/sos_toolkit/cli/: __init__.py
src/sos_toolkit/meta/: __init__.py  _action.py  _context.py  _exception.py  _global.py  _hook.py  _meta.py  _model.py  _platform.py  _result.py  _service.py  _tool.py  _utils.py
src/sos_toolkit/root/: __init__.py  sos-root.yaml
src/sos_toolkit/service/: __init__.py
src/sos_toolkit/tool/: __init__.py
src/sos_toolkit/tool/cli/: cmd.py
src/sos_toolkit/tool/context/: ctx.py  repo.py  runtime.py  tool.py
src/sos_toolkit/tool/docker/: _client.py  buildx.py  compose.py  container.py  image.py  network.py  volume.py
src/sos_toolkit/tool/filesystem/: directory.py  path.py
(+21 files in other folders)
